# Python_Iridis

./: .gitignore  README.md  pyproject.toml  test.py
iridis/: __init__.py  benchmark.py  color.py  color_prints.py  utils.py
