[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iridis"]

[project]
name = "iridis"
version = "0.2.1"
requires-python = ">=3.8"
authors = [
  {name = "Tobias Filgas", email = "tobiasfilgas@gmail.com"},
]
maintainers = [
  {name = "Tobias Filgas", email = "tobiasfilgas@gmail.com"},
]
description = "library for a colorful terminal!"
readme = "README.md"
license = {file = "LICENSE"}
