[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iridis"]

[project]
name = "iridis"
version = "0.2.3"
requires-python = ">=3.8"
authors = [
  {name = "Tobias Filgas", email = "tobiasfilgas@gmail.com"},
]
maintainers = [
  {name = "Tobias Filgas", email = "tobiasfilgas@gmail.com"},
]
description = "Useful methods for working in the terminal!"
readme = "README.md"
license = {file = "LICENSE"}
